# MoltenSaltPropnet

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: data_processor.ipynb  density-csv.csv  mstdb_janz_processed.csv  mstdb_processed.csv  viscosity-csv.csvold
data/trained_models/: Boil(K).joblib  Boil(K)_embedder.joblib  Boil(K)_scaler.joblib  Melt(K).joblib  Melt(K)_embedder.joblib  Melt(K)_scaler.joblib  base_Boil(K)_kan.pth  base_Boil(K)_snn.pth  base_Melt(K)_kan.pth  base_Melt(K)_snn.pth  base_cp_a_kan.pth  base_cp_a_snn.pth  base_cp_b_kan.pth  base_cp_b_snn.pth  base_cp_c_kan.pth  base_cp_c_snn.pth  base_k_a_kan.pth  base_k_a_snn.pth  base_k_b_kan.pth  base_k_b_snn.pth  base_mu1_a_kan.pth  base_mu1_a_snn.pth  base_mu1_b_kan.pth  base_mu1_b_snn.pth  base_mu2_a_kan.pth  base_mu2_a_snn.pth  base_mu2_b_kan.pth  base_mu2_b_snn.pth  base_mu2_c_kan.pth  base_mu2_c_snn.pth  base_rho_a_kan.pth  base_rho_a_snn.pth  base_rho_b_kan.pth  base_rho_b_snn.pth  cp_a.joblib  cp_a_embedder.joblib  cp_a_scaler.joblib  cp_b.joblib  cp_b_embedder.joblib  cp_b_scaler.joblib  (+31 more)
examples/: prediction_utility.ipynb  processing_example.ipynb  train_and_predict.py  train_and_predict_kan.py  train_and_predict_resnet.py  train_and_predict_snn.py
processing_mstdb/: __init__.py  embedding_preconditioner.py  kan_trainer.py  processor.py  resnet_trainer.py  snn_trainer.py  trainer.py
tests/: test_processor.py
webapp/: webapp.py
