[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "moltensaltpropnet"
version         = "0.1.0"
description     = "Machine-learning framework for molten-salt thermophysical properties"
readme          = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "torch>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]

# ────────────────────────────────────────────────────────────────────────
# key section: package list is *hard-coded*, nothing is auto-discovered
# ────────────────────────────────────────────────────────────────────────
[tool.setuptools]
packages = ["processing_mstdb"]
